# champ

./: --gitmodules  .gitignore  .gitmodules  Dockerfile  README.md  compose.yaml  pyproject.toml
docker/: core-compose.yaml  entrypoint.sh
docker/ros_deps/: pyproject.toml
docker/ros_deps/src/ros_deps/: scraper.py
