# To run the dependency scaping script, run (from docker/ros_deps):
#   hatch --data-dir .hatch run scrape:deps
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ros_deps"
version = "0.0.1"
description = "Scrape ROS dependencies from a catkin workspace."

dependencies = ["defusedxml"]

[tool.hatch.envs.scrape]
scripts.deps = "python3 src/ros_deps/scraper.py"
